--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+.c {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: absolute;
+  cursor: pointer;
+  will-change: transform, opacity;
+}
